--- a/requirements.txt
+++ b/requirements.txt
@@ -1,589 +1,56 @@
-# ============================================================================
-# BIST Portfolio Risk Analytics Enterprise Platform
-# Requirements Specification
-# ============================================================================
+# Core Dependencies
+streamlit==1.28.0
+numpy==1.24.3
+pandas==2.0.3
+plotly==5.17.0
+scipy==1.11.4
 
-# ────────────────────────────────────────────────────────────────────────────
-# CORE DEPENDENCIES (REQUIRED)
-# ────────────────────────────────────────────────────────────────────────────
+# Data Fetching
+yfinance==0.2.33
+requests==2.31.0
 
-# Web Application Framework
-streamlit>=1.28.0
+# Portfolio Optimization
+PyPortfolioOpt==1.5.5
 
-# Core Scientific Computing
-numpy>=1.24.0
-scipy>=1.11.0
-pandas>=2.1.0
-pandas-datareader>=0.10.0
-
-# Financial Analysis & Portfolio Optimization
-yfinance>=0.2.28
-pypfopt>=1.5.5
-
-# Statistical Analysis & Econometrics
-statsmodels>=0.14.0
-
-# Visualization
-plotly>=5.17.0
-plotly-express>=0.4.1
-
-# ────────────────────────────────────────────────────────────────────────────
-# ADVANCED ANALYTICS (RECOMMENDED)
-# ────────────────────────────────────────────────────────────────────────────
-
-# GARCH Volatility Modeling
-arch>=6.2.0
-
-# Machine Learning
-scikit-learn>=1.3.0
-joblib>=1.3.0
-
-# Time Series Analysis
-prophet>=1.1.5
-
-# ────────────────────────────────────────────────────────────────────────────
-# DEEP LEARNING & ADVANCED ML (OPTIONAL)
-# ────────────────────────────────────────────────────────────────────────────
-
-# Gradient Boosting
-xgboost>=1.7.0
-lightgbm>=4.0.0
+# Machine Learning & Statistics
+scikit-learn==1.3.2
+xgboost==2.0.0
+statsmodels==0.14.0
+arch==6.2.0
 
 # Deep Learning
-tensorflow>=2.13.0
-keras>=2.13.0
+tensorflow==2.13.0
+keras==2.13.1
 
-# Neural Network Architectures
-torch>=2.0.0
-torchvision>=0.15.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DATA PROCESSING & UTILITIES
-# ────────────────────────────────────────────────────────────────────────────
-
-# Data Manipulation
-pyarrow>=12.0.0
-fastparquet>=2023.4.0
-openpyxl>=3.1.0
-xlrd>=2.0.0
-
-# Caching & Performance
-joblib>=1.3.0
-cachetools>=5.3.0
-
-# Date/Time Handling
-python-dateutil>=2.8.2
-pytz>=2023.3
-
-# File Operations
-tables>=3.8.0
-h5py>=3.9.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# VISUALIZATION ENHANCEMENTS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Advanced Plotting
-bokeh>=3.3.0
-altair>=5.2.0
-seaborn>=0.12.2
-matplotlib>=3.7.0
-
-# Interactive Visualization
-ipywidgets>=8.0.0
-ipython>=8.15.0
-
-# Dashboard Components
-streamlit-aggrid>=0.3.4
-streamlit-echarts>=0.5.0
-streamlit-folium>=0.15.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# REPORT GENERATION
-# ────────────────────────────────────────────────────────────────────────────
-
-# PDF Generation
-reportlab>=4.0.0
-PyPDF2>=3.0.0
-
-# Excel Reporting
-xlsxwriter>=3.1.0
-
-# HTML/CSS Generation
-jinja2>=3.1.2
-markdown>=3.4.0
-
-# Email Integration
-premailer>=3.10.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DATABASE & DATA STORAGE
-# ────────────────────────────────────────────────────────────────────────────
-
-# SQL Databases
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
-mysql-connector-python>=8.0.0
-pymongo>=4.5.0
-
-# Time Series Databases
-influxdb>=5.3.0
-
-# Cache Databases
-redis>=4.5.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# API & WEB INTEGRATION
-# ────────────────────────────────────────────────────────────────────────────
-
-# REST APIs
-requests>=2.31.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
+# Natural Language Processing
+nltk==3.8.1
 
 # Web Scraping
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
-selenium>=4.14.0
-
-# API Clients
-alpha-vantage>=2.3.1
-quandl>=3.7.0
-fredapi>=0.5.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# NATURAL LANGUAGE PROCESSING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Text Processing
-nltk>=3.8.0
-textblob>=0.17.1
-spacy>=3.6.0
-
-# Sentiment Analysis
-vaderSentiment>=3.3.2
-transformers>=4.34.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# RISK ANALYTICS SPECIALIZED
-# ────────────────────────────────────────────────────────────────────────────
-
-# Risk Metrics
-riskmetrics>=0.1.0
-pyrisk>=0.2.0
-
-# Monte Carlo Simulation
-montecarlo>=1.0.0
-
-# Optimization
-cvxopt>=1.3.0
-cvxpy>=1.3.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# TIME SERIES & FORECASTING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Advanced Time Series
-pmdarima>=2.0.0
-sktime>=0.20.0
-tsfresh>=0.20.0
-
-# Anomaly Detection
-pyod>=1.0.0
-anomalib>=0.5.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# FINANCIAL DATA SPECIALIZED
-# ────────────────────────────────────────────────────────────────────────────
-
-# Market Data
-pandas-market-calendars>=4.2.0
-yahoofinancials>=1.8.0
-investpy>=1.0.6
-
-# Technical Analysis
-ta>=0.10.0
-pandas-ta>=0.3.14
-tulipy>=0.4.0
-
-# Fundamental Analysis
-financedatabase>=2.0.0
-yfinanceinsights>=0.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# SYSTEM & PERFORMANCE
-# ────────────────────────────────────────────────────────────────────────────
-
-# Parallel Processing
-multiprocess>=0.70.0
-dask>=2023.8.0
-ray>=2.7.0
-
-# Memory Optimization
-pympler>=1.0.0
-memory-profiler>=0.61.0
-
-# Performance Monitoring
-psutil>=5.9.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# SECURITY & ENCRYPTION
-# ────────────────────────────────────────────────────────────────────────────
-
-# Cryptography
-cryptography>=41.0.0
-pycryptodome>=3.18.0
-
-# Secure Storage
-keyring>=24.2.0
-python-dotenv>=1.0.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# TESTING & DEVELOPMENT
-# ────────────────────────────────────────────────────────────────────────────
-
-# Testing Framework
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-xdist>=3.5.0
-
-# Code Quality
-black>=23.9.0
-flake8>=6.1.0
-mypy>=1.5.0
-pylint>=3.0.0
-
-# Documentation
-sphinx>=7.2.0
-pdoc>=13.0.0
-
-# Version Control
-pre-commit>=3.5.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DEPLOYMENT & CONTAINERIZATION
-# ────────────────────────────────────────────────────────────────────────────
-
-# Containerization
-docker>=6.1.0
-
-# Environment Management
-poetry>=1.6.0
-pipenv>=2023.10.0
-
-# Cloud Integration
-boto3>=1.28.0
-azure-storage-blob>=12.18.0
-google-cloud-storage>=2.10.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# MONITORING & LOGGING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Logging
-structlog>=23.2.0
-loguru>=0.7.0
-
-# Monitoring
-prometheus-client>=0.17.0
-sentry-sdk>=1.30.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# MISCELLANEOUS UTILITIES
-# ────────────────────────────────────────────────────────────────────────────
-
-# Configuration Management
-hydra-core>=1.3.0
-omegaconf>=2.3.0
-
-# Progress Bars
-tqdm>=4.66.0
-rich>=13.5.0
-
-# CLI Tools
-click>=8.1.0
-typer>=0.9.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# PLATFORM SPECIFIC
-# ────────────────────────────────────────────────────────────────────────────
-
-# Windows Specific
-pywin32>=306
-
-# MacOS Specific
-pyobjc>=9.2.0
-
-# Linux Specific
-systemd-python>=234
-
-# ────────────────────────────────────────────────────────────────────────────
-# VERSION PINS FOR STABILITY
-# ────────────────────────────────────────────────────────────────────────────
-
-# Version pins for critical dependencies
-numpy==1.24.0
-pandas==2.1.0
-scipy==1.11.0
-scikit-learn==1.3.0
-tensorflow==2.13.0
-torch==2.0.0
-streamlit==1.28.0
-plotly==5.17.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DEVELOPMENT & DEBUGGING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Debugging
-ipdb>=0.13.0
-debugpy>=1.8.0
-
-# Profiling
-py-spy>=0.3.0
-snakeviz>=2.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# ADDITIONAL FINANCIAL PACKAGES
-# ────────────────────────────────────────────────────────────────────────────
-
-# Quantitative Finance
-QuantLib>=1.30.0
-quantstats>=0.0.60
-ffn>=0.3.6
-empyrical>=0.5.0
-
-# Backtesting
-backtrader>=1.9.78.123
-zipline>=3.0.0
-bt>=0.2.8
-
-# Algorithmic Trading
-ccxt>=4.0.0
-alpaca-trade-api>=2.3.0
-ib-insync>=0.9.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DATA VISUALIZATION EXTENSIONS
-# ────────────────────────────────────────────────────────────────────────────
-
-# 3D Visualization
-plotly-3d>=0.1.0
-kaleido>=0.2.0
-
-# Geographic Visualization
-geopandas>=0.14.0
-folium>=0.14.0
-
-# Network Visualization
-networkx>=3.1.0
-pyvis>=0.3.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# MACHINE LEARNING EXTENSIONS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Feature Engineering
-feature-engine>=1.6.0
-category-encoders>=2.6.0
-
-# AutoML
-auto-sklearn>=0.15.0
-tpot>=0.11.0
-
-# Explainable AI
-shap>=0.42.0
-lime>=0.2.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# BIG DATA & DISTRIBUTED COMPUTING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Big Data Processing
-pyspark>=3.5.0
-modin>=0.23.0
-
-# GPU Acceleration
-cupy-cuda12x>=12.0.0
-numba>=0.58.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# WEB APPLICATION ENHANCEMENTS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Authentication
-streamlit-authenticator>=0.2.0
-authlib>=1.2.0
-
-# Session State
-streamlit-session-state>=0.1.0
-
-# Components
-streamlit-extras>=0.3.0
-streamlit-option-menu>=0.3.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DOCUMENTATION & HELP
-# ────────────────────────────────────────────────────────────────────────────
-
-# Documentation Generation
-mkdocs>=1.5.0
-mkdocs-material>=9.4.0
-
-# Interactive Documentation
-streamlit-documentation>=0.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# BACKUP & RECOVERY
-# ────────────────────────────────────────────────────────────────────────────
-
-# Backup Solutions
-bup>=0.33.0
-
-# Data Recovery
-scandir>=1.10.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# COMPLIANCE & AUDITING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Audit Logging
-python-json-logger>=2.0.0
-
-# Compliance Tools
-openpyxl-styles>=0.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# ENTERPRISE INTEGRATION
-# ────────────────────────────────────────────────────────────────────────────
-
-# Message Queues
-pika>=1.3.0
-kafka-python>=2.0.0
-
-# Enterprise Service Bus
-nameko>=3.0.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# REAL-TIME PROCESSING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Real-time Data
-websockets>=12.0.0
-socketio>=5.0.0
-
-# Stream Processing
-faust>=1.10.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# SPECIALIZED FINANCIAL ANALYTICS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Fixed Income Analytics
-fixedincome>=0.1.0
-
-# Derivatives Pricing
-derivative>=0.1.0
-
-# Risk Management
-openrisk>=0.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# DATA QUALITY & VALIDATION
-# ────────────────────────────────────────────────────────────────────────────
-
-# Data Validation
-pandera>=0.16.0
-great-expectations>=0.18.0
-
-# Data Quality
-datacleaner>=0.1.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# EXPERIMENT TRACKING
-# ────────────────────────────────────────────────────────────────────────────
-
-# ML Experiment Tracking
-mlflow>=2.7.0
-wandb>=0.15.0
-
-# Version Control for Data
-dvc>=3.0.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# ADVANCED MATHEMATICS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Symbolic Mathematics
-sympy>=1.12.0
-
-# Numerical Optimization
-nlopt>=2.7.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# GEOSPATIAL ANALYSIS
-# ────────────────────────────────────────────────────────────────────────────
-
-# Geospatial Data
-rasterio>=1.3.0
-shapely>=2.0.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# IMAGE PROCESSING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Image Analysis
-opencv-python>=4.8.0
-Pillow>=10.0.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# AUDIO PROCESSING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Audio Analysis
-librosa>=0.10.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# BLOCKCHAIN & CRYPTO
-# ────────────────────────────────────────────────────────────────────────────
-
-# Blockchain Analysis
-web3>=6.0.0
-bitcoinlib>=0.6.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# QUANTUM COMPUTING
-# ────────────────────────────────────────────────────────────────────────────
-
-# Quantum Finance
-qiskit>=0.44.0
-pennylane>=0.32.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# EDGE CASES & LEGACY SUPPORT
-# ────────────────────────────────────────────────────────────────────────────
-
-# Legacy Support
-future>=0.18.0
-six>=1.16.0
-
-# Compatibility
-typing-extensions>=4.8.0
-importlib-metadata>=6.8.0
-
-# ────────────────────────────────────────────────────────────────────────────
-# INSTALLATION NOTES
-# ────────────────────────────────────────────────────────────────────────────
-
-# Installation command:
-# pip install -r requirements.txt
-
-# For GPU support (CUDA 12.x):
-# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
-
-# For M1/M2 Mac:
-# pip install tensorflow-macos
-# pip install tensorflow-metal
-
-# For minimal installation (core functionality only):
-# pip install streamlit numpy scipy pandas yfinance pypfopt plotly statsmodels
+beautifulsoup4==4.12.2
+
+# PDF Generation
+reportlab==4.0.4
+
+# Database
+sqlite3
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
+joblib==1.3.2
+threadpoolctl==3.2.0
+typing-extensions==4.8.0
+
+# Optional Dependencies (for specific features)
+# pandas-datareader==0.10.0
+# alpha-vantage==2.3.1
+# openpyxl==3.1.2
+# xlsxwriter==3.1.9
+# matplotlib==3.7.2
+# seaborn==0.12.2
+
+# Development & Testing
+pytest==7.4.2
+black==23.9.1
+flake8==6.1.0
+pylint==2.17.5
