--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-# Core Dependencies
+# Core dependencies
 streamlit==1.28.0
 numpy==1.24.3
 pandas==2.0.3
 plotly==5.17.0
 scipy==1.11.4
-
-# Data Fetching
 yfinance==0.2.33
 requests==2.31.0
 
-# Portfolio Optimization
+# Portfolio optimization
 PyPortfolioOpt==1.5.5
 
-# Machine Learning & Statistics
+# Machine Learning
 scikit-learn==1.3.2
 xgboost==2.0.0
 statsmodels==0.14.0
@@ -22,35 +20,12 @@ arch==6.2.0
 tensorflow==2.13.0
 keras==2.13.1
 
-# Natural Language Processing
+# NLP & Text processing
 nltk==3.8.1
-
-# Web Scraping
 beautifulsoup4==4.12.2
 
-# PDF Generation
+# Reporting
 reportlab==4.0.4
 
-# Database
-sqlite3
-
-# Utilities
-python-dateutil==2.8.2
-pytz==2023.3
-joblib==1.3.2
-threadpoolctl==3.2.0
-typing-extensions==4.8.0
-
-# Optional Dependencies (for specific features)
-# pandas-datareader==0.10.0
-# alpha-vantage==2.3.1
-# openpyxl==3.1.2
-# xlsxwriter==3.1.9
-# matplotlib==3.7.2
-# seaborn==0.12.2
-
-# Development & Testing
-pytest==7.4.2
-black==23.9.1
-flake8==6.1.0
-pylint==2.17.5
+# Version compatibility fixes
+typing-extensions==4.5.0  # Compatible with TensorFlow 2.13.0
