--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,28 @@
-# Core Dependencies
-streamlit==1.28.0
-numpy==1.24.3
-pandas==2.0.3
-plotly==5.17.0
-scipy==1.11.4
-yfinance==0.2.33
-requests==2.31.0
+# Streamlit Cloud-friendly requirements (LSTM/TensorFlow disabled; app still runs)
+streamlit>=1.30
+numpy>=1.26
+pandas>=2.1
+plotly>=5.18
+scipy>=1.11
+statsmodels>=0.14
+requests>=2.31
+yfinance>=0.2.36
 
-# Portfolio Optimization
-PyPortfolioOpt==1.5.5
+# Portfolio optimization
+PyPortfolioOpt>=1.5.5
+cvxpy>=1.4
+ecos>=2.0
 
-# Machine Learning
-scikit-learn==1.3.2
-xgboost==2.0.0
-statsmodels==0.14.0
-arch==6.2.0
+# Optional ML (non-deep)
+scikit-learn>=1.3
+xgboost>=2.0
 
-# Deep Learning
-tensorflow==2.13.0
-keras==2.13.1
+# Optional risk / econometrics
+arch>=6.3
 
-# NLP & Text Processing
-nltk==3.8.1
-beautifulsoup4==4.12.2
-
-# Reporting
-reportlab==4.0.4
-
-# Quantitative Analysis - NEW
-quantstats==0.0.62
-
-# Compatibility Fixes
-typing-extensions==4.5.0  # Compatible with TensorFlow 2.13.0
-
-# Utils
-python-dateutil==2.8.2
-pytz==2023.3
-tzdata==2023.3
-
-# Optional but useful
-openpyxl==3.1.2  # For Excel operations
-xlrd==2.0.1
+# Optional extras used by some modules
+nltk>=3.8
+beautifulsoup4>=4.12
+lxml>=5.0
+reportlab>=4.0
+openpyxl>=3.1
